Clusters/solr-cluster.yml
apiVersion: v1
kind: Service
metadata:
  name: solr-hs
  labels:
    app: solr-app
spec:
  ports:
  - port: 32080
  clusterIP: None
  selector:
    app: solr-app
---
apiVersion: v1
kind: Service
metadata:
  name: solr
spec:
  ports:
  - port: 32080
    targetPort: 8983
    nodePort: 32080
    protocol: TCP
  selector:
    app: solr-app
  type: NodePort
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
spec:
  selector:
    matchLabels:
      app: solr-app # has to match .spec.template.metadata.labels
  serviceName: "solr-hs"
  replicas: 3 
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: solr-app # has to match .spec.selector.matchLabels
    spec:
      volumes:
        - name: solr-xml
          configMap:
            name: solr-config-xml
            items:
            - key: solr.xml
              path: solr.xml
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                    - solr-app
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: solr
        image: solr:7.7.1
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.1"
        volumeMounts:
        - name: volsolr
          mountPath: /store
        ports:
        - name: solr-port
          containerPort: 8983
        livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              scheme: "HTTP"
              path: /solr/admin/info/system
              port: 8983
        readinessProbe:
          initialDelaySeconds: 15
          periodSeconds: 5
          httpGet:
            scheme: "HTTP"
            path: /solr/admin/info/system
            port: 8983
  volumeClaimTemplates:
    - metadata:
        name: volsolr
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
