Clusters/solr-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: solr-ui
spec:
  backend:
    serviceName: solr-cs
    servicePort: 8983
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: solr-cs
          servicePort: 8983
